--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,8 @@
 
 export(se)
 export(sum_squares)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_density)
+importFrom(ggplot2,ggplot)
+importFrom(magrittr,"%>%")
+importFrom(stats,sd)
