new Ztest function testthat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(density_plot)
 export(se)
 export(sum_squares)
+export(ztest)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,ggplot)
 importFrom(magrittr,"%>%")
+importFrom(stats,pnorm)
 importFrom(stats,sd)
