--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ URL: https://github.com/euweiss/mypackage
 BugReports: https://github.com/euweiss/mypackage/issues
 RoxygenNote: 7.0.2
 Imports: ggplot2, magrittr, stats
+Suggests: 
+    testthat (>= 2.1.0)
